# ruccolo

./: Cargo.toml
.github/: dependabot.yml
assets/scenes/CornellBox/: scene.gltf
assets/scenes/Curtains/: NewSponza.gltf
assets/shaders/: basic.wgsl
examples/gltf/: main.rs
examples/lazy_int/: main.rs
examples/wgpu_test/: main.rs
examples/windowing/: main.rs
src/: main.rs
src/editor/: mod.rs
src/runtime/: mod.rs
src/runtime/core/mathematics/: array.rs  matrix.rs  mod.rs
src/runtime/functions/: mod.rs
src/runtime/functions/event_system/: mod.rs
src/runtime/functions/render_system/: fps_manager.rs  mod.rs
src/runtime/functions/scene_system/: camera.rs  mod.rs  models.rs
src/runtime/functions/scene_system/models/: gltf.rs  renderable.rs
src/runtime/functions/window_system/: mod.rs
src/runtime/resources/: asset_system.rs  mod.rs
