[package]
name = "ruccolo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0
debug = true
lto = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
log = "*"
env_logger = "*"
winit = "*"
wgpu = "*"
pollster = "*"
profiling = "*"
tracy-client = "*"

[features]
default = ["profile-with-tracy"]
# profile-with-puffin = ["profiling/profile-with-puffin"]
# profile-with-optick = ["profiling/profile-with-optick"]
# profile-with-superluminal = ["profiling/profile-with-superluminal"]
# profile-with-tracing = ["profiling/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy"]
