[package]
name = "ruccolo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0
debug = true
lto = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
log = "0.4.20"
env_logger = "0.10"
winit = "0.28"
wgpu = "0.17"
pollster = "0.3"
profiling = "1"
bytemuck = { version = "1", features = ["derive"] }
tobj = "4"
gltf = { version = "1" }

[features]
default = ["profile-with-tracy"]
# profile-with-puffin = ["profiling/profile-with-puffin"]
# profile-with-optick = ["profiling/profile-with-optick"]
# profile-with-superluminal = ["profiling/profile-with-superluminal"]
# profile-with-tracing = ["profiling/profile-with-tracing"]
# cargo build --release --no-default-features
profile-with-tracy = ["profiling/profile-with-tracy"]
